--- a/SB.WebAPI/appsettings.json
+++ b/SB.WebAPI/appsettings.json
@@ -6,8 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
   "SQLServer": {
     "ConnectionString": "server=mysql60.unoeuro.com;database=qvistgaard_me_db_sbdb;user=qvistgaard_me;password=FRGka5Dmencr"
-  }
+  },
+  "AllowedHosts": "*"
 }
