--- a/SB.WebAPI/appsettings.Development.json
+++ b/SB.WebAPI/appsettings.Development.json
@@ -6,7 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "SQLServer": {
-    "ConnectionString": "server=localhost;database=sb_database;user=root;password="
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;database=sb_database;user=root;password="
   }
 }
