--- a/SB.WebAPI/Dockerfile
+++ b/SB.WebAPI/Dockerfile
@@ -1,5 +1,4 @@
 FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS final
 WORKDIR /app
 COPY ./bin/Release/net5.0 /app/publish 
-CD /app/publish
-ENTRYPOINT ["dotnet", "SB.WebAPI.dll"]
+ENTRYPOINT ["dotnet", "/app/publish/SB.WebAPI.dll"]
