--- a/SB.WebAPI/SB.WebAPI.csproj
+++ b/SB.WebAPI/SB.WebAPI.csproj
@@ -18,4 +18,13 @@
       <ProjectReference Include="..\SB.EFCore\SB.EFCore.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+      <Content Update="appsettings.Development.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
 </Project>
