--- a/SB.WebAPI/Dockerfile
+++ b/SB.WebAPI/Dockerfile
@@ -1,4 +1,5 @@
 FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS final
 WORKDIR /app
 COPY ./bin/Release/net5.0 /app/publish 
-ENTRYPOINT ["dotnet", "/app/publish/SB.WebAPI.dll"]
+WORKDIR /app/publish
+ENTRYPOINT ["dotnet", "SB.WebAPI.dll"]
