--- a/SB.WebAPI/appsettings.Development.json
+++ b/SB.WebAPI/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=mysql60.unoeuro.com;database=qvistgaard_me_db_sbdb;user=qvistgaard_me;password=FRGka5Dmencr"
+    "DefaultConnection": "server=mysql60.unoeuro.com;database=qvistgaard_me_db_sbdb;user=qvistgaard_me;password=FRGka5Dmencr;SslMode=none"
   }
 }
