--- a/SB.WebAPI/appsettings.json
+++ b/SB.WebAPI/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=dbhostaddress;database=qvistgaard_me_db_sbdb;user=qvistgaard_me;password=FRGka5Dmencr;SslMode=none"
+    "DefaultConnection": "server=94.231.103.43;database=qvistgaard_me_db_sbdb;user=qvistgaard_me;password=FRGka5Dmencr;SslMode=none"
   },
   "AllowedHosts": "*"
 }
