--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   api:
     build:
       context: "SB.WebAPI"
+      network_mod: host
     container_name: "supportbuddy-api-container"
     ports:
       - "8091:80"
