--- a/SB.WebAPI/appsettings.json
+++ b/SB.WebAPI/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=94.231.103.43,3306;database=qvistgaard_me_db_sbdb;user=qvistgaard_me;password=FRGka5Dmencr;SslMode=none"
+    "DefaultConnection": "server=supportbuddy_db_container,1433;database=sbdb_staging;user=sa;password=supportBuddyDatabase123!$MultipleActiveResultSets=True;"
   },
   "AllowedHosts": "*"
 }
