--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,36 @@ services:
       - "8989:1433"
     volumes:
       - supportBuddyData:/var/opt/mssql:rw
-    
+      
+  portainer:
+    image: portainer/portainer-ce
+    container_name: "portainer"
+    ports:
+      - "7001:9000"
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
+      - "portainer_data:/data"
+  docker-registry:
+    image: "registry"
+    volumes:
+      - "registry_data:/var/lib/registry"
+    ports:
+      - "7002:5000"
+  docker-registry-ui:
+    image: "parabuzzle/craneoperator"
+    ports:
+      - "7003:80"
+    environment:
+      - REGISTRY_HOST=docker-registry
+      - REGISTRY_PORT=5000
+      - REGISTRY_PROTOCOL=http
+      - SSL_VERIFY=false
+      - USERNAME=admin
+      - PASSWORD=vpseliten123
+    depends_on:
+      - docker-registry
+
 volumes:
     supportBuddyData:
+    portainer_data:
+    registry_data:
