--- a/SB.WebAPI/appsettings.json
+++ b/SB.WebAPI/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=supportbuddy_db_container,1433;Database=sbdb_staging;User=sa;Password=supportBuddyDatabase123!;MultipleActiveResultSets=True;"
+    "DefaultConnection": "Server=localhost,1433;Database=sbdb_staging;User=sa;Password=supportBuddyDatabase123!;MultipleActiveResultSets=True;"
   },
   "AllowedHosts": "*"
 }
