--- a/SB.WebAPI/appsettings.Development.json
+++ b/SB.WebAPI/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=94.231.103.43,3306;database=qvistgaard_me_db_sbdb;user=qvistgaard_me;password=FRGka5Dmencr;SslMode=none"
+    "DefaultConnection": "Server=vps.qvistgaard.me,8989;Database=sbdb_staging;User=sa;Password=supportBuddyDatabase123!;MultipleActiveResultSets=True;"
   }
 }
