--- a/SB.WebAPI/appsettings.Development.json
+++ b/SB.WebAPI/appsettings.Development.json
@@ -8,5 +8,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=vps.qvistgaard.me,8989;Database=sbdb_staging;User=sa;Password=supportBuddyDatabase123!;MultipleActiveResultSets=True;"
+  },
+  "SupportBuddySettings": {
+    "Url": "http://vps.qvistgaard.me:8980"
   }
 }
