--- a/SB.WebAPI/appsettings.json
+++ b/SB.WebAPI/appsettings.json
@@ -9,5 +9,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=db;Database=sbdb_staging;User=sa;Password=supportBuddyDatabase123!;MultipleActiveResultSets=True;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SupportBuddySettings": {
+    "Url": "http://vps.qvistgaard.me:8980"
+  }
 }
