--- a/config/Prod.env
+++ b/config/Prod.env
@@ -1,4 +1,4 @@
-IMAGE_TAG=${BUILD_NUMBER}
+IMAGE_TAG=${PROMOTED_BUILD_NUMBER}
 API_PORT=9980
 DB_PORT=9989
 API_CONT_NAME=supportbuddy-api-container-production
