--- a/SB.CoreDomainTest/SB.CoreDomainTest.csproj
+++ b/SB.CoreDomainTest/SB.CoreDomainTest.csproj
@@ -8,6 +8,8 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+        <PackageReference Include="Moq" Version="4.18.1" />
+        <PackageReference Include="NUnit" Version="3.13.3" />
         <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -22,6 +24,7 @@
     <ItemGroup>
       <ProjectReference Include="..\SB.Core\SB.Core.csproj" />
       <ProjectReference Include="..\SB.Domain\SB.Domain.csproj" />
+      <ProjectReference Include="..\SB.EFCore\SB.EFCore.csproj" />
     </ItemGroup>
 
 </Project>
